--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,8 @@ logs/
 *.log
 
 # Dataset Files (Optional, if you want to exclude raw data)
-data/
-*.csv
+# data/
+# *.csv
 
 # Model and Output Files
 models/
