--- a/config-infra-prod.yml
+++ b/config-infra-prod.yml
@@ -2,9 +2,10 @@
 variables:
 
   # Global
-  ap_vm_image: ubuntu-20.04
+  # ap_vm_image: ubuntu-20.04
+  ap_vm_image: "Canonical:UbuntuServer:20_04-lts:latest"
 
-  namespace: demoworkspace # Updated namespace
+  namespace: aionazml # Updated namespace
   postfix: 001 # Updated postfix
   location: eastus # Updated location
 
